--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="author-name">
             By
             <a href="#" target="_blank" rel="noreferrer"
-              >freeCodeCamp</a
+              >Cristina</a
             >
           </p>
           <p class="publish-date">March 7, 2026</p>
