--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates nesciunt vel culpa nihil perspiciatis vitae minus aspernatur perferendis soluta, alias ducimus temporibus provident aperiam, odio similique repellendus tenetur velit ipsum?
         </p>
         <p>
-          After years - years - of pondering these two problems and how to solve them, I slipped, hit my head on the sink, and when I came to I had a revelation! A vision! A picture in my head! A picture of this! This is what makes time travel possible: the flux capacitor!
-        </p>
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error natus id nisi iusto eveniet et earum optio expedita labore mollitia suscipit soluta harum accusamus alias vero, vitae rem perferendis? Accusantium.        </p>
         <p>
           It wasn't as dramatic as Doc's revelation in Back to the Future. It
           just occurred to me while I was going for a run. The revelation: the entire curriculum should be a series of projects. Instead of individual coding challenges, we'll just have projects, each with their own seamless series of tests. Each test gives you just enough information to figure out how to get it to pass. (And you can view hints if that isn't enough.)
@@ -70,15 +69,11 @@
           </p>
           <hr />
         </blockquote>
-        <p>
-          No more walls of explanatory text. No more walls of tests. Just one
-          test at a time, as you build up a working project. Over the course of passing thousands of tests, you build up projects and your own understanding of coding fundamentals. There is no transition between lessons and projects, because the lessons themselves are baked into projects. And there's plenty of repetition to help you retain everything because - hey - building projects in real life has plenty of repetition.
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed quam ipsum voluptates? Voluptatem eius consequuntur voluptates rem fugit corporis magni!
         </p>
-        <p>
-          The main design challenge is taking what is currently paragraphs of explanation and instructions and packing them into a single test description text. Each project will involve dozens of tests like this. People will be coding the entire time, rather than switching back and forth from "reading mode" to "coding mode".
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit commodi, corporis ratione necessitatibus tempore aspernatur?
         </p>
-        <p>
-          Instead of a series of coding challenges, people will be in their code editor passing one test after another, quickly building up a project. People will get into a real flow state, similar to what they experience when they build the required projects at the end of each certification. They'll get that sense of forward progress right from the beginning. And freeCodeCamp will be a much smoother experience.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, doloribus.
         </p>
       </section>
       <section class="text text-with-images">
@@ -94,34 +89,27 @@
             </li>
             <li>
               <h4 class="list-subtitle">V2 - 2015</h4>
-              <p>We added interactive algorithm challenges.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </li>
             <li>
               <h4 class="list-subtitle">V3 - 2015</h4>
               <p>
-                We added our own HTML+CSS challenges (before we'd been relying on
-                General Assembly's Dash course for these).
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem assumenda id et praesentium, aperiam mollitia. Reprehenderit.
               </p>
             </li>
             <li>
               <h4 class="list-subtitle">V4 - 2016</h4>
               <p>
-                We expanded the curriculum to 3 certifications, including Front
-                End, Back End, and Data Visualization. They each had 10 required
-                projects, but only the Front End section had its own challenges.
-                For the other certs, we were still using external resources like
-                Node School.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis obcaecati facere odit impedit quasi nostrum accusamus tenetur dignissimos vitae, itaque magnam tempore eius cupiditate, earum, qui optio eligendi similique ducimus.
               </p>
             </li>
             <li>
               <h4 class="list-subtitle">V5 - 2017</h4>
-              <p>We added the back end and data visualization challenges.</p>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
             </li>
             <li>
               <h4 class="list-subtitle">V6 - 2018</h4>
-              <p>
-                We launched 6 new certifications to replace our old ones. This was
-                the biggest curriculum improvement to date.
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit optio modi repellendus deserunt recusandae, perferendis inventore facilis iure veniam assumenda nesciunt, suscipit commodi eaque hic ad ipsum autem. Doloribus, officiis.
               </p>
             </li>
           </ul>
